css/main.css
/* ... */
  aside div.be-partner p {max-width: 25em;}
  aside div.be-partner a, aside div.be-partner a:visited {
    color: var(--n-dark);
    background-color: var(--hot-light);
  }

  div.sponsors {
    padding-top: 0.5rem;
    margin-top: 1rem;
  }

  div.sponsors h3 {
    font-variation-settings: "wght" 800;
    color: var(--hot-color);
    margin-bottom: 1rem;
    border-top: 5px dotted var(--hot-color);
  }
  div.sponsors.silver h3 {
    color: var(--main-color);
    border-color: var(--main-color);
  }
  div.sponsors.bronze h3 {
    color: var(--hot-light);
    border-color: var(--hot-light);
  }
  div.sponsors.partner h3 {
    color: var(--hot-color);
    border-color: var(--hot-color);
  }

  div.sponsors ul {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    list-style-type: none;
  }

  div.sponsors li {
    box-sizing: border-box;
    min-width: 80px;
    background-color: var(--text-high);
    padding: 0.5rem;
    margin: 0 auto 2rem auto;
    border-radius: 100%;
  }
    div.sponsors a {
      margin: 1rem;
      width: 100px;
      height: 100px;
      display: flex;
    }

    div.sponsors img {
      margin: auto;
    }

div.sponsors a:focus, aside div.be-partner a:focus, p.cfp a:focus {
  outline-color: var(--body-bg);
}


p.register {
  font-variation-settings: "wght" 800;
  margin-top: 0.8em;
}

div.presentation {
  max-width: 45em;
  line-height: 1.5;
  margin: 7vw 0 5vw;
}

  div.presentation p {font-size: calc(1.2rem + 1vw);}

div.stats {margin-bottom: 4rem;}

  div.stats ul {
    overflow: hidden;
    min-height: 5rem;
    list-style-type: none;
  }
  div.stats strong {
    display: block;
    font-size: 250%;
    color: var(--hot-light);
    text-align: right;
  }

  div.stats span {
    display: block;
    border-top: 1px solid var(--main-color);
  }

  div.stats li {
    overflow: hidden;
    position: relative;
    height: 1px;
    background-color: var(--body-bg);
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-timing-function: cubic-bezier(0.1, -0.6, 0.2, 0);
    transition: margin;
  }

  @keyframes slideStats1 {
    0% {height: 1px;}
    100% {height: 5rem;}
  }
  @keyframes slideStats2 {
    0% {height: 1px; margin-top: -5rem;}
    40% {margin-top: 0;}
    100% {height: 5rem; margin-top: 0;}
  }
  @keyframes slideStats3 {
    0% {height: 1px; margin-top: -10rem;}
    50% {margin-top: 0;}
    100% {height: 5rem; margin-top: 0;}
  }
  @keyframes slideStats4 {
    0% {height: 1px; margin-top: -15rem;}
    30% {margin-top: 0;}
    100% {height: 5rem; margin-top: 0;}
  }

  div.stats li:nth-child(1) {
    animation-name: slideStats1;
    z-index: 4;
  }
  div.stats li:nth-child(2) {
    margin-top: -5rem;
    animation-name: slideStats2;
    z-index: 1;
  }
  div.stats li:nth-child(3) {
    margin-top: -10rem;
    animation-name: slideStats3;
    z-index: 2;
  }
  div.stats li:nth-child(4) {
    margin-top: -15rem;
    animation-name: slideStats4;
    z-index: 3;
  }

div.decor {
  position: relative;
  margin: 0 0 4rem;
  z-index: 1;
}
  div.decor h2 strong {
    display: block;
    transition: all .5s;
  }

  div.decor .content {max-width: 800px;}

p.illustration {margin-bottom: 1rem;}

div.decor::after {
  content: "";
  display: block;
  position: absolute;
  width: 5px;
  height: 50%;
  bottom: 0;
  left: 2rem;
  border-left: 9px dotted var(--hot-light);
  transition: all .5s;
}

div.decor p {line-height: 1.45;}

div.decor p:not(.illustration) {
  font-size: calc(0.8em + 1vw);
  margin-right: 2rem;
  margin-left: 4rem;
}
p.read-more {margin-top: 1rem;}


/* ----------------------------------------------------------------- */
/* -------------------------- ARTICLE ---------------------------- */


.page-body {max-width: 55em; margin: 4rem 0;}

  .page-body h2 {
    color: var(--main-color);
  }
  .page-body p, .page-body li {line-height: 1.6;}

  .page-body p + p {margin-top: 0.8em;}

  .page-body ul {margin: 1em;}

div.faq + div.faq {margin-top: 2rem;}

div.faq h3 {color: var(--hot-light);}

article.h-entry p + h3 {
  margin-top: 1em;
}
article.h-entry h3 {
  font-variation-settings: "wght" 800;
  color: var(--hot-light);
}

article.h-entry div.group {
  margin-top: calc(2rem + 2vw);
}

article.h-entry div.group.typography {
  padding: calc(1rem + 2vw) 0;
  border-top: 10px dotted var(--hot-light);
  border-bottom: 10px dotted var(--hot-light);
}

ul.thumbs {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  list-style-type: none;
  margin: 1rem 0 0;
}

  ul.thumbs li {
    font-size: 0.9em;
    text-align: center;
    background-color: var(--n-dark);
    padding: 1rem;
  }
  
  ul.thumbs a {
    box-sizing: border-box;
    display: block; 
    padding: 1rem 2rem;
  }
  ul.thumbs a:hover {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='none' d='M0 0h24v24H0z'/%3E%3Cpath d='M16 2l5 5v14.008a.993.993 0 0 1-.993.992H3.993A1 1 0 0 1 3 21.008V2.992C3 2.444 3.445 2 3.993 2H16zm-3 10V8h-2v4H8l4 4 4-4h-3z' style='fill:%23EF7918' /%3E%3C/svg%3E");
    background-repeat: no-repeat;
    background-position: 15px right;
  }

  ul.palette {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    list-style-type: none;
    margin: 2rem 0 0;
  }

  ul.palette li {
    font-size: 0.8em;
    text-align: center;
  }

  ul.palette li::before {
    display: block;
    content: "";
    width: 50px;
    height: 50px;
    margin: 0 auto 1rem;
    border-radius: 50px;
  }

  ul.palette li:nth-child(1)::before {
    background-color: #F61C7C;
  }
  ul.palette li:nth-child(2)::before {
    background-color: #EF7918;
  }
  ul.palette li:nth-child(3)::before {
    background-color: #03B7D5;
  }
  ul.palette li:nth-child(4)::before {
    background-color: #191919;
    border: 1px solid currentColor;
  }
/* ... */

